[package]
name = "hodgecodec"
version = "0.5.0"
edition = "2021"
description = "First Hodge decomposition audio codec — encode/decode .hodge files"
license = "MIT"
authors = ["Maksym Dyachenko <hi@hodgecodec.com>"]
repository = "https://github.com/mdyachenko/hodgecodec"
keywords = ["audio", "codec", "hodge", "topology", "compression"]

[lib]
name = "hodgecodec"
path = "src/lib.rs"

[[bin]]
name = "hodge"
path = "src/bin/hodge.rs"

[dependencies]
printpdf = "0.7"
hound = "3.5"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
zstd = "0.13"

[[bin]]
name = "hodge-play"
path = "src/bin/hodge_play.rs"

[[bin]]
name = "hodge-fp-bench"
path = "src/bin/fp_bench.rs"

[[bin]]
name = "hodge-fp-compare"
path = "src/bin/fp_compare.rs"

[[bin]]
name = "hodge-paper-pdf"
path = "src/bin/paper_pdf.rs"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hodge_rt"
harness = false
